--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,1 +1,16 @@
-Salut les gens
+{% extends 'base.html.twig' %}
+{% block title %} Sylove-Aceuil
+ {% endblock %}
+
+
+ {% block body %} 
+<div class="container mt-4">
+    <div class="jumbotron">
+        <h1 class="display-4 mt-5" >Bienvenu sur Sylove</h1>
+        <p class="lead">L'amour est beau , l'amour est fort. Sylove pour propose des personnes fan d'amour pour vous. </p>
+        <hr class="my-4">
+        <p>Pour commencer merci de vous inscrire afin de profiter les avantages qu'offrent Sylove.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Inscription</a>
+    </div>
+</div>
+ {% endblock %}
