--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
     </head>
     <body>
         {% block header %}
-        {% include 'Partiels/header.html.twig' %}
+        {% include 'partiels/header.html.twig' %}
         {% endblock %}
 
         {% block body %}{% endblock %}
