Mise en place du CRUD

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -7,7 +7,7 @@
 <div class="container mt-4">
     <div class="jumbotron">
         <h1 class="display-4 mt-5" >Bienvenu sur Sylove</h1>
-        <p class="lead">L'amour est beau , l'amour est fort. Sylove pour propose des personnes fan d'amour pour vous. </p>
+        <p class="lead">L'amour est beau , l'amour est fort. Sylove vous propose des personnes fan d'amour pour vous. </p>
         <hr class="my-4">
         <p>Pour commencer merci de vous inscrire afin de profiter les avantages qu'offrent Sylove.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Inscription</a>
