--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -1,23 +1,64 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ingredient{% endblock %}
+{% block title %}Sylove - Mes ingredients{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; margin-top:10px }
-</style>
 
-<div class="example-wrapper mt-5">
-    <div class=" mtt"> 
+    <div class="container mt-5 ">
+        {% if not ingredients.items is same as {} %}
+ 
+            <h1 class ="d-flex justify-content-center mt-5"> Mes ingredients</h1>
 
-        <h1>Hello {{ controller_name }}! ✅</h1>
+            <div class="count d-flex justify-content-center">
+               <h4> Il y a au total {{ingredients.getTotalItemCount }} ingrédients </h4>
+            </div> 
 
-        This friendly message is coming from:
-        <ul>
-            <li>Your controller at <code><a href="{{ 'C:/wamp64/www/symfonytest/src/Controller/IngredientController.php'|file_link(0) }}">src/Controller/IngredientController.php</a></code></li>
-            <li>Your template at <code><a href="{{ 'C:/wamp64/www/symfonytest/templates/ingredient/index.html.twig'|file_link(0) }}">templates/ingredient/index.html.twig</a></code></li>
-        </ul>
+            <a href = {{ path('ingredient.new') }} class = 'btn btn-primary'>Créer un ingrédient</a>  
+            
+
+
+                {% for message in app.flashes('success') %}
+                 <div class = 'alert alert-success mt-4'>
+                  {{message}}
+                 </div> 
+               {% endfor %}     
+            <table class="table table-hover m-4">
+                    <thead>
+                        <tr>
+                            <th scope="col">Numero</th>
+                            <th scope="col">Nom</th>
+                            <th scope="col">Prix</th>
+                            <th >Date de création</th>
+                            <th scope="col">Edition</th>
+                            <th scope="col">Supression</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for ingredient in ingredients %}
+                            <tr class="table-primary">
+                                <th scope="row"> {{ingredient.id}}</th>
+                                <th>{{ingredient.name}}</th>
+                                <th>{{ingredient.price}}</th>
+                                <th>{{ingredient.createdAt | date('d/m/Y')}} </th>
+                                <th>
+                                <a href = "{{path('ingredient.edit', {id: ingredient.id } )}}" class="btn btn-info">Editer</a>
+                                </th>
+                                <th>
+                                <a href = "{{path('ingredient.delete', {id: ingredient.id } )}}" class="btn btn-danger">Suprimer</a>
+                                </th>
+
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+            </table> 
+            <div class="navigation d-flex justify-content-center mt-4">
+            {{knp_pagination_render(ingredients) }}
+            </div>  
+        {% else %} 
+            <h4> Il y a pas d'ingrédients </h4>      
+        {% endif %}
+
     </div>
-</div>
+
 {% endblock %}
