Mise en place de la partie Recipe avec creation du CRUD

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,19 @@
         {% endblock %}
 
         {% block body %}{% endblock %}
+
+
+        {% block footer %}
+        {% include 'partiels/footer.html.twig' %}
+        
+        {% endblock %}
+
+
+
     </body>
+
+
+    
 
       
 
