--- a/templates/Partiels/header.html.twig
+++ b/templates/Partiels/header.html.twig
@@ -10,7 +10,10 @@
           <a class="nav-link active" aria-current="page" href="{{path('home.index')}}">Aceuil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{path('app_ingredient')}}">Ingrédients</a>
+          <a class="nav-link" href="{{path('app_ingredient')}}">Mes Ingrédients</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{path('app_recipe')}}">Mes Recettes</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
