tout est ok. resolution du problème de connexion et ajout modif user profil

--- a/templates/Partiels/header.html.twig
+++ b/templates/Partiels/header.html.twig
@@ -20,10 +20,10 @@
             Dropdown
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="{{path('app_security')}}">Se connecter</a></li>
+            <li><a class="dropdown-item" href="{{path('security.registration')}}">S'inscrire</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="{{path('security.logout')}}">Deconnexion</a></li>
           </ul>
         </li>
       </ul>
