--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,7 +10,7 @@
         <p class="lead">L'amour est beau , l'amour est fort. Sylove vous propose des personnes fan d'amour pour vous. </p>
         <hr class="my-4">
         <p>Pour commencer merci de vous inscrire afin de profiter les avantages qu'offrent Sylove.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Inscription</a>
+        <a class="btn btn-primary btn-lg" href="{{path('security.registration')}}" role="button">Inscription</a>
     </div>
 </div>
  {% endblock %}
