--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -12,16 +12,21 @@
            {{error.messageKey|trans(error.messageData, 'security') }} 
         </div>  
     {% endif %}
+     {% for message in app.flashes('success') %}
+        <div class = 'alert alert-success mt-4'>
+            {{message}}
+        </div> 
+    {% endfor %}
     <form action="{{path('app_security')}}" method="post">
         <div class="form-group">
             <label for ="username" class ="form-label mt-4">Adresse email </label>
             <input type="email" class="form-control" id="username" value="{{Last_username}}"
-            name="username" placeholder="example@sylove.com" ></input>
+            name="_username" placeholder="example@sylove.com">
         </div>
         <div class="form-group">
             <label for ="password" class ="form-label mt-4">Mot de passe</label>
             <input type="password" class="form-control" id="password"
-            name="password" placeholder="Votre mot de passe" ></input>
+            name="_password" placeholder="Votre mot de passe">
         </div>
 
         <button type ="submit" class= "btn btn-primary mt-4">Se connecter</button>
