--- a/templates/Partiels/header.html.twig
+++ b/templates/Partiels/header.html.twig
@@ -9,24 +9,40 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{{path('home.index')}}">Aceuil</a>
         </li>
-        <li class="nav-item">
+        {% if app.user %}
+          <li class="nav-item">
           <a class="nav-link" href="{{path('app_ingredient')}}">Mes Ingrédients</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{path('app_recipe')}}">Mes Recettes</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{{path('app_security')}}">Se connecter</a></li>
-            <li><a class="dropdown-item" href="{{path('security.registration')}}">S'inscrire</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="{{path('security.logout')}}">Deconnexion</a></li>
-          </ul>
-        </li>
+        {% endif %}       
       </ul>
+      <div class"d-flex">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+               {% if app.user %}
+                <li class="nav-item dropdown" style="margin-right : 5rem ;">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{app.user.fullName}}
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{{path('app_user', {id : app.user.id})}}">Modifier mes informations</a></li>
+                    <li><a class="dropdown-item" href="{{path('app_user_edit_password', {id : app.user.id})}}">Modifier mon mot de pass</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="{{path('security.logout')}}">Deconnexion</a></li>
+                  </ul>
+               </li>
+                 {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{{path('app_security')}}">Connexion</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{path('security.registration')}}">Inscription</a>
+                </li>
+                {% endif %}
+                
+              </ul>
+            </div>
     </div>
   </div>
 </nav>
