--- a/templates/pages/user/edit_password.html.twig
+++ b/templates/pages/user/edit_password.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Sylove | Modification de l'utilisateur{% endblock %}
+{% block title %}Sylove | Modification de mot de passe utilisateur{% endblock %}
 
 {% block body %}
 
 
 <div class="container mt-5">
-    <h1 class ="d-flex justify-content-center mt-5">Formulaire de modification des informations de l'utilisateur</h1>
+    <h1 class ="d-flex justify-content-center mt-5">Formulaire de modification de mot de passe de l'utilisateur</h1>
       {% for message in app.flashes('warning') %}
         <div class = 'alert alert-warning mt-4'>
             {{message}}
