rendre les reccettes publiques

--- a/templates/Partiels/footer.html.twig
+++ b/templates/Partiels/footer.html.twig
@@ -1,5 +1,5 @@
 <!-- Footer Start -->
-<footer id="rs-footer" class="rs-footer">
+<footer id="rs-footer" class="rs-footer" style ="background-color: #212529;">
     <div class="container">
         <div class="footer-content pt-26 pb-7 md-pb-7 sm-pt-26">
             <div class="row">
