--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -12,5 +12,25 @@
         <p>Pour commencer merci de vous inscrire afin de profiter les avantages qu'offrent Sylove.</p>
         <a class="btn btn-primary btn-lg" href="{{path('security.registration')}}" role="button">Inscription</a>
     </div>
+    
+    <div class= >
+        <h2 class="mt-4">Reccettes de la conmunauté </h2>
+        <div class="d-flex justify-content-between"> 
+            {% for recipe in recipes %}
+            <div class="card">
+                <div class="card-header" style="max-width:20rem;">
+                    <div class="card-header">
+                           <h5 class="card-title"> Recette n° {{recipe.id}} </h5>
+                         <hr>    
+                        <div class="card-body">
+                            <h4 class="card-title"> {{recipe.name}} </h4>
+                            <p class="card-text">{{recipe.description|slice(0, 100)}}... </p>
+                        </div>      
+                    </div>      
+                </div>    
+            </div>    
+            {% endfor %}
+        </div>
+    </div>
 </div>
  {% endblock %}
