--- a/templates/pages/recipe/index_public.html.twig
+++ b/templates/pages/recipe/index_public.html.twig
@@ -20,6 +20,8 @@
                         <div class="card-body">
                             <h4 class="card-title"> {{recipe.name}} </h4>
                             <p class="card-text">{{recipe.description|slice(0, 100)}}... </p>
+                            <a class="card-link" href="#">Voir plus</a>
+
                         </div>      
                     </div>      
                 </div>    
