--- a/templates/pages/recipe/new.html.twig
+++ b/templates/pages/recipe/new.html.twig
@@ -53,6 +53,7 @@
           <div class="form-error">
             {{ form_errors(form.price) }}
           </div>
+          
         </div>
         <div class="form-group mt-4 ">
           {{ form_label(form.isFavorite) }}
@@ -61,6 +62,8 @@
             {{ form_errors(form.isFavorite) }}
           </div>
         </div>
+             {{ form_row(form.imageFile) }}
+        
         <div class="form-group">
           {{ form_label(form.ingredients) }}
           {{ form_widget(form.ingredients) }}
