arrangement et commentaire

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -35,7 +35,7 @@
                         <div class="card-body">
                             <h4 class="card-title"> {{recipe.name}} </h4>
                             <p class="card-text">{{recipe.description|slice(0, 100)}}... </p>
-                            <a class="card-link" href="#">Voir plus</a>
+                            <a class="card-link" href="{{path('recipe.show', {id: recipe.id})}}">Plus de details</a>
                         </div>      
                     </div>      
                 </div>    
@@ -44,4 +44,5 @@
         </div>
     </div>
 </div>
+<hr> <hr> <hr> 
  {% endblock %}
