--- a/templates/pages/recipe/index_public.html.twig
+++ b/templates/pages/recipe/index_public.html.twig
@@ -20,8 +20,7 @@
                         <div class="card-body">
                             <h4 class="card-title"> {{recipe.name}} </h4>
                             <p class="card-text">{{recipe.description|slice(0, 100)}}... </p>
-                            <a class="card-link" href="#">Voir plus</a>
-
+                            <a class="card-link" href="{{path('recipe.show', {id: recipe.id})}}">Plus de details</a>
                         </div>      
                     </div>      
                 </div>    
@@ -29,15 +28,13 @@
             {% endfor %}
         </div>
     </div>
-              
-            
-            <div class="navigation d-flex justify-content-center mt-4">
-               {{knp_pagination_render(recipes) }}
-            </div>  
-        {% else %} 
+                
+    <div class="navigation d-flex justify-content-center mt-4">
+      {{knp_pagination_render(recipes) }}
+    </div>  
+    {% else %} 
             <h4> Il y a pas de recettes </h4>      
-        {% endif %}
-
+    {% endif %}
     </div>
-
+       <hr> <hr> <hr> 
 {% endblock %}
