--- a/templates/Partiels/header.html.twig
+++ b/templates/Partiels/header.html.twig
@@ -9,6 +9,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{{path('home.index')}}">Aceuil</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{path('app_contact')}}">Nous contacter</a>
+        </li>
         {% if app.user %}
           <li class="nav-item">
           <a class="nav-link" href="{{path('app_ingredient')}}">Mes Ingrédients</a>
