--- a/templates/Partiels/footer.html.twig
+++ b/templates/Partiels/footer.html.twig
@@ -3,67 +3,19 @@
     <div class="container">
         <div class="footer-content pt-26 pb-7 md-pb-7 sm-pt-26">
             <div class="row">
-                <div class="col-lg-2 offset-lg-1 col-md-12 col-sm-12 footer-widget md-mb-39">
-                    <div class="about-widget pr-15">
-                        <div class="logo-part">
-                            
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 md-mb-32 footer-widget sm-mt--30">
-                    <h4 class="widget-title">Nos coordonnées</h4>
-                    <ul class="address-widget pr-40">
-                        <li>
-                            <i class="flaticon-location"></i>
-                            <div class="desc">
-                                Lot 3153 P/B, Agla, Cotonou, Bénin
-                            </div>
-                        </li>
-                        <li>
-                            <i class="flaticon-call"></i>
-                            <div class="desc">
-                                <a href="tel:+22960607970">+229 60 60 79 70</a> / <a href="tel:+22960526161">+229 60 52 61 61</a>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="flaticon-email"></i>
-                            <div class="desc">
-                                <a href="mailto:contact@e-coye.com">contact@e-coye.com</a>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="flaticon-clock"></i>
-                            <div class="desc">
-                                Lun - Ven: 8:00 - 18:30 / Sam: 9:00 - 13:00
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 footer-widget sm-mb--40">
-                    <h4 class="widget-title">Offres Disponibles</h4>
-                </div>
+                                       
             </div>
         </div>
         <div class="footer-bottom">
             <div class="row y-middle">
-                <div class="col-lg-5 offset-lg-1 col-md-8 sm-mb-21">
-                    <div class="copyright">
-                        <p>© Copyright 2020 E-COYE. Tous droits réservés.</p>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-4 text-right sm-text-center">
-                    <ul class="footer-social">
-                        <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
-                        <li>
-                            <a href="#" target="_blank">
-                                <i>
-                                    <img src="" alt="TikTok" style="width: 18px; height: 18px;">
-                                </i>
-                            </a>
-                        </li>
-                    </ul>
+                   
+                <div class="col-lg-12 col-md-4 text-right sm-text-center">
+
+                        <p>
+                       <a href="mailto:contact@benrec.com">contact@benrec.com</a>
+
+                       <br>  © Copyright 2023. Tous droits réservés.
+                        </p>
                 </div>
             </div>
         </div>
