--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,19 +3,54 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
             rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+            <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+            <!-- font-awesome css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/fontawesome.css') }}">
+            <!-- animate css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/animate.css') }}">
+            <!-- slick css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/owl.css') }}">
+            <!-- off canvas css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/off-canvas.css') }}">
+            <!-- linea-font css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/fonts/linea-fonts.css') }}">
+            <!-- flaticon css  -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/fonts/flaticon.css') }}">
+            <!-- magnific popup css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/templatemo-cyborg-gaming.css') }}">
+            <!-- Main Menu css -->
+            <link rel="stylesheet" href="{{ asset('assets/css/rsmenu-main.css') }}">
+            <!-- nivo slider CSS -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/inc/custom-slider/css/nivo-slider.css') }}">
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/inc/custom-slider/css/preview.css') }}">
+            <!-- rsmenu transitions css -->
+            <link rel="stylesheet" href="{{ asset('assets/css/rsmenu-transitions.css') }}">
+            <!-- spacing css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/rs-spacing.css') }}">
+            <!-- rs animations css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/rs-animations.css') }}">
+            <!-- select2 css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/select2.min.css') }}">
+            <!-- zoombox css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/zoombox/zoombox.css') }}">
+            <!-- flatpicker css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/flatpickr.min.css') }}">
+            <!-- style css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/style.css') }}">
+            <!-- responsive css -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/responsive.css') }}">
+            <!-- CustomElement-DropFiles -->
+        
         {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-        {% endblock %}
+        
     </head>
     <body>
         {% block header %}
@@ -30,7 +65,18 @@
         
         {% endblock %}
 
-
+           {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+         
+            <script src="{{asset('assets/vendor/jquery/jquery.min.js')}}"></script>
+            <script src="{{asset('assets/js/isotope.min.js')}}"></script>
+            <script src="{{asset('assets/js/owl-carousel.js')}}"></script>
+            <script src="{{asset('assets/js/tabs.js')}}"></script>
+            <script src="{{asset('assets/js/popup.js')}}"></script>
+            <script src="{{asset('assets/js/custom.js')}}"></script>
+        {% endblock %}
 
     </body>
 
