--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -4,17 +4,93 @@
 
 {% block body %}
 
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                 <div class="page-content">
+
+                        <!-- ***** Featured Start ***** -->
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="feature-banner header-text">
+                                <div class="row">                                       
+                                        <div class="col-lg-12">
+                                            <div class="thumb">
+                                            <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
+                                            </div>
+                                        </div>
+                                   </div>
+                               </div>
+                            </div>
+                        </div>
+                        <!-- ***** Featured End ***** -->
+
+                        <!-- ***** Details Start ***** -->
+                        <div class="game-details">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h2>Mes ingrédients</h2>
+                                </div>
+                                    <div class="col-lg-12">
+                                      <div class="content">
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <div class="left-info">
+                                                        <div class="left">
+                                                            <h4>Fortnite</h4>
+                                                            <span>Sandbox</span>
+                                                        </div>
+                                                        <ul>
+                                                        <li><i class="fa fa-star"></i> 4.8</li>
+                                                        <li><i class="fa fa-download"></i> 2.3M</li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <div class="right-info">
+                                                        <ul>
+                                                        <li><i class="fa fa-star"></i> 4.8</li>
+                                                        <li><i class="fa fa-download"></i> 2.3M</li>
+                                                        <li><i class="fa fa-server"></i> 36GB</li>
+                                                        <li><i class="fa fa-gamepad"></i> Action</li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4">
+                                                  <img src="{{('assets/images/details-01.jpg')}}" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                                                </div>
+                                                <div class="col-lg-4">
+                                                  <img src="{{('assets/images/details-02.jpg')}}" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                                                </div>
+                                                <div class="col-lg-4">
+                                                  <img src="{{('assets/images/details-03.jpg')}}" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                                                </div>
+                                                <div class="col-lg-12">
+                                                  <p><a href="{{path('home.index')}}"><span>BenRec</span></a> vous donne la possiblitité d'ajouter vos indregients de recette afin de créer ou d'ajouter vous meme vos recettes. veillez a ce que vos recettes respectent les conditions.        
+                                                  <a href="#" target="_blank">Voir les conditions</a></p>
+                                                </div>
+                                                <div class="col-lg-12">
+                                                    <div class="main-border-button">
+                                                      <a href =" {{ path('ingredient.new') }}" class = 'btn btn-primary'>Ajouter un ingrédient</a>                                                                                            
+                                                    </div>
+                                                </div>
+                                            </div>
+                                       </div>
+                                    </div>
+                               </div>
+                           </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          <!-- ***** Details End ***** -->
     <div class="container mt-5 ">
         {% if not ingredients.items is same as {} %}
- 
-            <h1 class ="d-flex justify-content-center mt-5"> Mes ingredients</h1>
 
             <div class="count d-flex justify-content-center">
-               <h4> Il y a au total {{ingredients.getTotalItemCount }} ingrédients </h4>
+               <h4>Vous avez au total {{ingredients.getTotalItemCount }} ingrédients </h4>
             </div> 
-
-            <a href = {{ path('ingredient.new') }} class = 'btn btn-primary'>Créer un ingrédient</a>  
-
                 {% for message in app.flashes('success') %}
                  <div class = 'alert alert-success mt-4'>
                   {{message}}
@@ -23,12 +99,12 @@
             <table class="table table-hover m-4">
                     <thead>
                         <tr>
-                            <th scope="col">Numero</th>
-                            <th scope="col">Nom</th>
-                            <th scope="col">Prix</th>
-                            <th >Date de création</th>
-                            <th scope="col">Edition</th>
-                            <th scope="col">Supression</th>
+                            <th scope="col"><h6> Numero </h6></th>
+                            <th scope="col"><h6>Nom</h6></th>
+                            <th scope="col"><h6>Prix</h6></th>
+                            <th ><h6>Date de création</h6></th>
+                            <th scope="col"><h6>Edition</h6></th>
+                            <th scope="col"><h6>Supression</h6></th>
 
                         </tr>
                     </thead>
@@ -54,7 +130,13 @@
             {{knp_pagination_render(ingredients) }}
             </div>  
         {% else %} 
-            <h4> Il y a pas d'ingrédients </h4>      
+            <div class="d-flex justify-content-center">       
+                  <h4> Vous n'avez pas ecore de recette </h4> 
+            </div>
+            <div class="d-flex justify-content-center mt-4">
+                 <h6> Ajouter une recette pour voir vos recettes affichés ici</h6>
+            </div>
+            
         {% endif %}
 
     </div>
