--- a/templates/pages/ingredient/new.html.twig
+++ b/templates/pages/ingredient/new.html.twig
@@ -3,7 +3,36 @@
 {% block title %}Sylove | Création d'ingrédient{% endblock %}
 
 
-{% block body %} 
+{% block body %}
+
+
+     <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                 <div class="page-content">
+
+                        <!-- ***** Featured Start ***** -->
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="feature-banner header-text">
+                                <div class="row">                                       
+                                        <div class="col-lg-12">
+                                            <div class="thumb">
+                                            <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
+                                            </div>
+                                        </div>
+                                   </div>
+                               </div>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+      </div>
+
+    <!-- ***** Featured End ***** -->
+    
     <div class="container mt-4">
 
         <h1 class="display-4 mt-5" >Création d'un ingrédient</h1>
@@ -12,14 +41,14 @@
         {{ form_start(form) }} 
 
         <div class="form-group">
-          {{ form_label(form.name) }}
+         <h6> {{ form_label(form.name) }}</h6>
           {{ form_widget(form.name) }}
           <div class="form-error">
             {{ form_errors(form.name) }}
           </div>
         </div>
         <div class="form-group">
-          {{ form_label(form.price) }}
+        <h6>{{ form_label(form.price) }}</h6>
           {{ form_widget(form.price) }}
           <div class="form-error">
             {{ form_errors(form.price) }}
