--- a/templates/pages/security/registration.html.twig
+++ b/templates/pages/security/registration.html.twig
@@ -7,8 +7,10 @@
 <div class="container mt-5">
     <h1 class ="d-flex justify-content-center mt-5">Formulaire d'inscription</h1>
 
-{{ form(form) }}
+    <div >
+         <h6>{{ form(form) }} </h6>
+    </div>
 
-
+</div>
 
 {% endblock body %}
