--- a/templates/Partiels/header.html.twig
+++ b/templates/Partiels/header.html.twig
@@ -35,8 +35,12 @@
                                   </a>
                                     <ul class="dropdown-menu">
                                       <li><a class="dropdown-item" href="{{path('app_user', {id : app.user.id})}}">Modifier mes informations</a></li>
-                                      <li><a class="dropdown-item" href="{{path('app_user_edit_password', {id : app.user.id})}}">Modifier mon mot de pass</a></li>
+                                      <li><a class="dropdown-item" href="{{path('app_user_edit_password', {id : app.user.id})}}">Modifier mon mot de passe</a></li>
                                       <li><hr class="dropdown-divider"></li>
+                                      {% if 'ROLE_ADMIN' in app.user.roles %}
+                                        <li><a class="dropdown-item" href="{{path('admin')}}">Administration</a></li>
+                                      <li><hr class="dropdown-divider"></li>
+                                      {% endif %}
                                       <li><a class="dropdown-item" href="{{path('security.logout')}}">Deconnexion</a></li>
                                     </ul>
                                 </li>
